# speckle-embodied-carbon-calculator

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
src/aggregators/: carbon_totals.py
src/applications/revit/: revit_carbon_processor.py  revit_compliance.py  revit_logger.py  revit_material.py  revit_material_processor.py  revit_model.py  revit_source_validator.py
src/applications/revit/utils/: constants.py  material_quality_strategy.py  material_type_handler.py
src/carbon/: __init__.py  aggregator.py  data.py  types.py
src/core/base/: __init__.py  carbon_processor.py  compliance.py  logger.py  material.py  material_processor.py  model.py  source_validator.py
src/core/types/: __init__.py  material_class.py  material_data.py
src/domain/: constants.py  types.py
src/domain/carbon/: concrete_reinforcement.py  emission_factor_registry.py  material_alias_service.py  registry.py  schema.py
src/domain/carbon/databases/: base.py  database_factory.py  enums.py  epd_global.py
src/infrastructure/: logging.py
src/interfaces/: __init__.py  compliance_checker.py  logger.py  material_processor.py  model_processor.py  validator.py
src/logging/: compliance_logger.py
src/models/: material.py
src/processors/: __init__.py  commit_processory.py  compliance.py  material.py  model.py
src/services/: carbon_calculator.py  element_processor.py  material_processor.py
src/utils/: constants.py
src/validators/: __init__.py  revit.py
tests/: manual_test.py  test_function.py  test_registry.py
(+11 files in other folders)
