[tool.poetry]
authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]
description = "Example function for Speckle Automate using specklepy"
name = "speckle-automate-py"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pylint = "^3.3.4"
python = "^3.11"
reportlab = "^4.3.1"
specklepy = "^2.21.0"
structlog = "^25.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
pydantic-settings = "^2.3.0"
pytest = "^7.4.2"
ruff = "^0.0.271"
# specklepy = { path = "../specklepy", develop = true }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "UP", # pyupgrade
  "D", # pydocstyle
  "I", # isort
]

[tool.ruff.pydocstyle]
convention = "google"
